--- a/ansible/roles/common/role_provisioning/main.yml
+++ b/ansible/roles/common/role_provisioning/main.yml
@@ -1,5 +1,6 @@
 ---
  - name: Create provisioning role, which install java, docker, create system user, create folders and other required staff on CI and QA environment's
+   become: yes
    import_tasks:
      - install_java.yml
      - install_docker.yml
