--- a/ansible/roles/role_provisioning/tasks/install_docker.yml
+++ b/ansible/roles/role_provisioning/tasks/install_docker.yml
@@ -1,30 +1,30 @@
 ---
   - name: Install aptitude using apt
-      apt:
+      yum:
         name: aptitude
         state: latest
         update_cache: yes
         force_apt_get: yes
 
   - name: Install required system packages
-      apt:
+      yum:
         name: {{ item }}
         state: latest
         update_cache: yes
         loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
 
   - name: Add Docker GPG apt Key
-      apt_key:
+      yum_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
 
   - name: Add Docker Repository
-      apt_repository:
+      yum_repository:
         repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
 
   - name: Update apt and install docker-ce
-      apt:
+      yum:
         update_cache: yes
         name: docker-ce
         state: latest
