--- a/ansible/roles/role_provisioning/tasks/setup_user_deploy.yml
+++ b/ansible/roles/role_provisioning/tasks/setup_user_deploy.yml
@@ -22,5 +22,5 @@
   authorized_key:
     user: deploy
     state: present
-    key: "{{ lookup('file', '/var/lib/jenkins/.ssh/id_rsa') }}"
+    key: "{{ lookup('file', '/var/lib/jenkins/.ssh/id_rsa.pub') }}"
 
