--- a/ansible/roles/role_provisioning/tasks/install_docker.yml
+++ b/ansible/roles/role_provisioning/tasks/install_docker.yml
@@ -4,7 +4,6 @@
         name: aptitude
         state: latest
         update_cache: yes
-        force_apt_get: yes
 
   - name: Install required system packages
       yum:
@@ -13,22 +12,44 @@
         update_cache: yes
         loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
 
-  - name: Add Docker GPG apt Key
-      yum_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
+  - name: Add Docker repo
+    get_url:
+      url: https://download.docker.com/linux/centos/docker-ce.repo
+      dest: /etc/yum.repos.d/docer-ce.repo
+    become: yes
 
-  - name: Add Docker Repository
-      yum_repository:
-        repo: deb https://download.docker.com/linux/ubuntu bionic stable
-        state: present
+  - name: Enable Docker Edge repo
+    ini_file:
+      dest: /etc/yum.repos.d/docer-ce.repo
+      section: 'docker-ce-edge'
+      option: enabled
+      value: 0
+    become: yes
 
-  - name: Update apt and install docker-ce
-      yum:
-        update_cache: yes
-        name: docker-ce
-        state: latest
+  - name: Enable Docker Test repo
+    ini_file:
+      dest: /etc/yum.repos.d/docer-ce.repo
+      section: 'docker-ce-test'
+      option: enabled
+      value: 0
+    become: yes
 
-  - name: Install Docker Module for Python
-      pip:
-        name: docker
+  - name: Install Docker
+    package:
+      name: docker-ce
+      state: latest
+    become: yes
+
+  - name: Start Docker service
+    service:
+      name: docker
+      state: started
+      enabled: yes
+    become: yes
+
+  - name: Add user vagrant to docker group
+    user:
+      name: deploy
+      groups: docker
+      append: yes
+    become: yes
