--- a/ansible/roles/role_provisioning/tasks/install_docker.yml
+++ b/ansible/roles/role_provisioning/tasks/install_docker.yml
@@ -4,7 +4,7 @@
         name: {{ item }}
         state: latest
         update_cache: yes
-        loop: [ 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
+        loop: [ 'curl', 'software-properties-common', 'python3-pip', 'python3-setuptools']
         become: true
 
   - name: Add Docker repo
