--- a/ansible/roles/role_provisioning/tasks/install_docker.yml
+++ b/ansible/roles/role_provisioning/tasks/install_docker.yml
@@ -1,11 +1,12 @@
 ---
   - name: Install required system packages
       yum:
-        name: {{ item }}
+#        name: {{ item }}
+        name: curl
         state: latest
         update_cache: yes
-        loop: [ 'curl', 'software-properties-common', 'python3-pip', 'python3-setuptools']
-        become: true
+#        loop: [ 'curl', 'software-properties-common', 'python3-pip', 'python3-setuptools']
+        become: yes
 
   - name: Add Docker repo
     get_url:
