--- a/ansible/roles/role_deploy/tasks/main.yml
+++ b/ansible/roles/role_deploy/tasks/main.yml
@@ -1,8 +1,6 @@
 ---
 - name: Install simple-rest-app
-  hosts: CI_env
-  become_user: deploy
-  import_tasks: common/tasks/get_artifact_fr_jenkins.yml
+  import_tasks: "{ common/tasks/get_artifact_fr_jenkins.yml, common/tasks/start_app.yml }"
 
 
 
