--- a/ansible/roles/role_deploy/tasks/main.yml
+++ b/ansible/roles/role_deploy/tasks/main.yml
@@ -1,8 +1,6 @@
----
 - name: Install simple-rest-app
-  import_tasks:
-    - roles/common/tasks/get_artifact_fr_jenkins.yml
-    - roles/common/tasks/start_app.yml
+  import_tasks: roles/common/tasks/get_artifact_fr_jenkins.yml
+  import_tasks: roles/common/tasks/start_app.yml
 
 
 
