--- a/ansible/roles/role_deploy/tasks/main.yml
+++ b/ansible/roles/role_deploy/tasks/main.yml
@@ -1,3 +1,5 @@
+- name: deploy
+  become_user: deploy
 - import_tasks: roles/common/tasks/get_artifact_fr_jenkins.yml
 - import_tasks: roles/common/tasks/start_app.yml
 
