--- a/ansible/roles/common/tasks/get_artifact_fr_jenkins.yml
+++ b/ansible/roles/common/tasks/get_artifact_fr_jenkins.yml
@@ -1,5 +1,7 @@
 ---
 - name: copy artifact
   copy:
+    become_user: deploy
     src: /var/lib/jenkins/.m2/repository/com/simple/restclient/client/1.0/client-1.0-app.jar
     dest: /home/deploy/
+
