--- a/ansible/roles/role_provisioning/tasks/main.yml
+++ b/ansible/roles/role_provisioning/tasks/main.yml
@@ -1,3 +1,3 @@
 - import_tasks: install_java.yml
 - import_tasks: setup_user_deploy.yml
-- import_tasks: install_docker.yml
+- import_tasks: install_docker.yml.yml
