--- a/ansible/roles/common/tasks/install_docker.yml
+++ b/ansible/roles/common/tasks/install_docker.yml
@@ -13,7 +13,12 @@
       update_cache: yes
     loop:
       - apt-transport-https
-    #, 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
+      - ca-certificates
+      - curl
+      - software-properties-common
+      - python3-pip
+      - virtualenv
+      - python3-setuptools
 
   - name: Add Docker GPG apt Key
     apt_key:
