--- a/ansible/roles/role_provisioning/tasks/install_java.yml
+++ b/ansible/roles/role_provisioning/tasks/install_java.yml
@@ -19,7 +19,7 @@
   - name: Install default-jdk
     yum:
 #      name: java-1.8.0-openjdk-devel
-      name: java-1.8.0-openjdk
+      name: openjdk-11-jdk
       state: present
     become: true
  #   when: '(install_type == "jdk") and (java_version == "default")'
