--- a/ansible/roles/common/tasks/get_artifact_fr_jenkins.yml
+++ b/ansible/roles/common/tasks/get_artifact_fr_jenkins.yml
@@ -1,6 +1,6 @@
 ---
 - name: copy artifact
-  become_user: deploy
+  #become_user: deploy
   copy:
     src: /var/lib/jenkins/.m2/repository/com/simple/restclient/client/1.0/client-1.0-app.jar
     dest: /home/deploy/
