--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.simple.restclient</groupId>
     <artifactId>simple-rest-client</artifactId>
-    <version>1.0</version>
+    <version>1.0.${v}</version>
     <modules>
         <module>client</module>
         <module>database</module>
