--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>client</module>
         <module>database</module>
     </modules>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
